<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNotes"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fgmt_notes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NoteTitle"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:background="@drawable/custom_editetxt_for_addnew_notes"/>

        <TextView
            android:id="@+id/fgmt_notes_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/note_time"/>

        <EditText
            android:id="@+id/fgmt_notes_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/NoteContent"
            android:textSize="20sp"

            android:background="@drawable/custom_editetxt_for_addnew_notes"/>


    </LinearLayout>


</FrameLayout>