<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_top_leftt_and_right">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_newTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titleNewTask"
            android:textColor="@color/silver"
            android:textSize="16sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/content_task"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:autofillHints=""
            android:backgroundTint="@color/white"
            android:gravity="top"
            android:hint="@string/hintToDo"
            android:inputType="textImeMultiLine"
            android:maxHeight="200dp"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnClose"
                android:text="Hủy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"/>
            <Button
                android:id="@+id/newToDo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/white"
                android:text="@string/textButtonDone"
                android:textColor="@color/silver" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>